[gd_scene load_steps=4 format=3 uid="uid://1rg3cqnadif3"]

[ext_resource type="Theme" uid="uid://bspmlvl5swl0i" path="res://Panel.tres" id="1_5f0ys"]
[ext_resource type="Script" path="res://nodes/SettingsUI/ResolutionSetting.gd" id="2_o4q5g"]

[sub_resource type="LabelSettings" id="LabelSettings_l5a1b"]
font_size = 24

[node name="SettingsUi" type="Control" node_paths=PackedStringArray("res_options_bar", "wind_mode_options_bar")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_o4q5g")
res_options_bar = NodePath("PanelContainer/MarginContainer/VBoxContainer/ResolutionSetting/ResolutionOptions")
wind_mode_options_bar = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/WindowModeOptions")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_5f0ys")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ResolutionSetting" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ResolutionSetting"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution"
label_settings = SubResource("LabelSettings_l5a1b")

[node name="ResolutionOptions" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/ResolutionSetting"]
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "1920x1080"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Window type"
label_settings = SubResource("LabelSettings_l5a1b")

[node name="WindowModeOptions" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "1920x1080"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Apply"

[node name="Revert" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Revert"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/ResolutionSetting/ResolutionOptions" to="." method="_on_resolution_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/WindowModeOptions" to="." method="_on_display_type_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Revert" to="." method="_on_revert_pressed"]
